--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "marked": "~0.3.5",
     "angular-sanitize": "~1.4.3",
     "firebase": "^2.2.4",
-    "firepad": "^1.1.1"
+    "firepad": "^1.1.1",
+    "socket.io-client": "~1.3.6"
   }
 }
