--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "angular-sanitize": "~1.4.3",
     "firebase": "^2.2.4",
     "firepad": "^1.1.1",
-    "socket.io-client": "~1.3.6"
+    "socket.io-client": "~1.3.6",
+    "jquery": "~2.1.4"
   }
 }
