--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "expect.js": "^0.3.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-eslint": "^1.0.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-minify-css": "^1.2.0",
     "gulp-mocha": "^2.1.3",
     "gulp-nodemon": "^2.0.3",
