--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.1.1",
     "q": "^1.0.1",
     "request": "^2.60.0",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
