--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "firebase": "^2.2.4",
     "firepad": "^1.1.1",
     "socket.io-client": "~1.3.6",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular-mocks": "~1.4.4"
   }
 }
