--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.6",
+    "karma-nyan-reporter": "^0.2.2",
+    "karma-unicorn-reporter": "^0.1.4",
     "run-sequence": "^1.1.2",
     "supertest": "^1.0.1"
   }
